oauth/mesh/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: auth-service-vs
  namespace: auth-provider
spec:
  gateways:
  - auth-gateway
  hosts:
  - "*"
  http:
  - route:
    - destination:
        host: auth-service
        port:
          number: 80
